--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      top: 0;
-      bottom: 0;
       opacity: 0;
       transition: opacity 1s ease-in;
     }
 
-    /* شاشة تحميل بشعار بيرزيت */
+    /* شاشة التحميل */
     #loading-screen {
       position: fixed;
       top: 0;
@@ -46,32 +44,6 @@
       transition: opacity 1s ease;
     }
 
-    /* حركة دوران الشعار */
-    @keyframes rotate {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    /* حركة النص */
-    @keyframes pulse {
-      0% {
-        opacity: 0.3;
-      }
-
-      50% {
-        opacity: 1;
-      }
-
-      100% {
-        opacity: 0.3;
-      }
-    }
-
     #loading-screen img {
       width: 150px;
       margin-bottom: 15px;
@@ -79,9 +51,9 @@
     }
 
     #loading-text {
-      animation: pulse 2s infinite;
       font-size: 18px;
       letter-spacing: 1px;
+      animation: pulse 2s infinite;
     }
 
     #loading-screen.fade-out {
@@ -89,73 +61,37 @@
       pointer-events: none;
     }
 
-    .leaflet-control-scale {
-      background: white;
-      padding: 2px;
+    @keyframes rotate {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
+    @keyframes pulse {
+      0% { opacity: 0.3; }
+      50% { opacity: 1; }
+      100% { opacity: 0.3; }
+    }
+
+    .leaflet-control-scale { background: white; padding: 2px; }
     .leaflet-control-custom {
       background: white;
       padding: 5px;
       border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
       cursor: pointer;
-    }
-
-    .custom-controls {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      z-index: 1000;
-    }
-
-    .custom-btn {
-      background: white;
-      border: none;
-      border-radius: 8px;
-      padding: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-
-    .custom-btn:hover {
-      transform: scale(1.1);
-      background: #ffefef;
-    }
-
-    #north-arrow {
-      position: absolute;
-      bottom: 15px;
-      right: 15px;
-      z-index: 1000;
-      width: 60px;
-      opacity: 0.8;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- شاشة التحميل -->
   <div id="loading-screen">
-    <img src="https://upload.wikimedia.org/wikipedia/en/f/f7/Birzeit_University_logo.png"
-      alt="Birzeit University Logo">
+    <img src="birzeit.png" alt="Birzeit University Logo">
     <p id="loading-text">أهلاً بكم</p>
   </div>
 
   <div id="map"></div>
-  <img id="north-arrow" src="https://upload.wikimedia.org/wikipedia/commons/8/88/Compass_rose_simple.svg" alt="North Arrow">
 
-  <div class="custom-controls">
-    <button class="custom-btn" id="toggle-theme">🌞 / 🌙</button>
-    <button class="custom-btn" id="locate-me">📍</button>
-  </div>
-
-  <!-- مكتبات -->
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
@@ -163,24 +99,9 @@
   <script>
     const map = L.map("map", {
       center: [31.9045, 35.2045],
-      zoom: 17,
+      zoom: 17.5,
       zoomSnap: 0.25
     });
-
-    // اختيار الخلفية حسب الوقت
-    const dayTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-      maxZoom: 20,
-      attribution: '&copy; OpenStreetMap & CARTO',
-      subdomains: 'abcd'
-    });
-    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-      maxZoom: 20,
-      attribution: '&copy; OpenStreetMap & CARTO',
-      subdomains: 'abcd'
-    });
-
-    let currentTheme = (new Date().getHours() >= 6 && new Date().getHours() < 18) ? "day" : "night";
-    (currentTheme === "day" ? dayTiles : nightTiles).addTo(map);
 
     // مقياس الرسم
     L.control.scale({ position: 'bottomleft' }).addTo(map);
@@ -189,46 +110,60 @@
     const north = L.control({ position: "topright" });
     north.onAdd = function () {
       const div = L.DomUtil.create("div", "leaflet-control-custom");
-      div.innerHTML = '<img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Compass_rose_simple.svg" width="40" title="North">';
+      div.innerHTML = '<img src="https://cdn-icons-png.flaticon.com/512/54/54494.png" width="40" title="North">';
       return div;
     };
     north.addTo(map);
 
-    // زر تبديل الليل والنهار
-    document.getElementById("toggle-theme").onclick = function () {
-      if (currentTheme === "day") {
-        map.removeLayer(dayTiles);
-        nightTiles.addTo(map);
-        currentTheme = "night";
-      } else {
-        map.removeLayer(nightTiles);
-        dayTiles.addTo(map);
-        currentTheme = "day";
-      }
-    };
-
     // زر تحديد الموقع
-    document.getElementById("locate-me").onclick = function () {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(pos => {
-          const lat = pos.coords.latitude;
-          const lon = pos.coords.longitude;
-          const userMarker = L.circleMarker([lat, lon], {
-            radius: 8,
-            fillColor: 'blue',
-            color: '#fff',
-            weight: 2,
-            fillOpacity: 0.9
-          }).addTo(map);
-          userMarker.bindPopup("📍 You are here").openPopup();
-          map.setView([lat, lon], 17);
-        });
-      } else {
-        alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
-      }
-    };
+    const locateBtn = L.control({ position: 'topleft' });
+    locateBtn.onAdd = function () {
+      const btn = L.DomUtil.create('button', 'locate-button');
+      btn.innerHTML = '📍 Locate Me';
+      btn.style.backgroundColor = '#fff';
+      btn.style.padding = '6px 10px';
+      btn.style.border = '2px solid #555';
+      btn.style.borderRadius = '8px';
+      btn.style.cursor = 'pointer';
+      btn.style.boxShadow = '0 1px 5px rgba(0,0,0,0.4)';
+      btn.title = 'Find your current location';
 
-    // أيقونة الحاويات
+      btn.onclick = function () {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function (pos) {
+            const lat = pos.coords.latitude;
+            const lon = pos.coords.longitude;
+            const userMarker = L.circleMarker([lat, lon], {
+              radius: 8,
+              fillColor: 'blue',
+              color: '#fff',
+              weight: 2,
+              opacity: 1,
+              fillOpacity: 0.9
+            }).addTo(map);
+            userMarker.bindPopup("📍 You are here!").openPopup();
+            map.setView([lat, lon], 17);
+          });
+        } else alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
+      };
+      return btn;
+    };
+    locateBtn.addTo(map);
+
+    // اختيار الخريطة حسب الوقت
+    const currentHour = new Date().getHours();
+    const isNight = currentHour >= 18 || currentHour < 6;
+    const baseMapUrl = isNight
+      ? 'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png'
+      : 'https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png';
+
+    L.tileLayer(baseMapUrl, {
+      attribution: '&copy; OpenStreetMap & CARTO',
+      subdomains: 'abcd',
+      maxZoom: 20
+    }).addTo(map);
+
+    // أيقونة دائرة للحاويات
     const binIcon = L.icon({
       iconUrl: 'https://cdn-icons-png.flaticon.com/512/3097/3097144.png',
       iconSize: [28, 28],
@@ -236,44 +171,37 @@
       popupAnchor: [0, -14]
     });
 
-    // طبقات الحاويات والمناطق
-    let wasteLayer, zonesLayer;
+    let wasteLayer, zonesLayer, markerCluster;
 
-    // MarkerCluster
-    const markerCluster = L.markerClusterGroup();
+    // Cluster
+    markerCluster = L.markerClusterGroup();
 
     $.getJSON("wasteContainer.json", function (data) {
       wasteLayer = L.geoJson(data, {
         pointToLayer: function (feature, latlng) {
           const marker = L.marker(latlng, { icon: binIcon })
-            .bindPopup("<b>Waste Container</b><br>Lat: " + latlng.lat.toFixed(4) + "<br>Lon: " + latlng.lng.toFixed(4));
+            .bindPopup(`<b>Waste Container</b><br>Lat: ${latlng.lat.toFixed(4)}<br>Lon: ${latlng.lng.toFixed(4)}`);
           markerCluster.addLayer(marker);
           return marker;
         }
       });
       map.addLayer(markerCluster);
-      checkAllLayersLoaded();
+      checkLoaded();
     });
 
     $.getJSON("RamallahZones.json", function (zones) {
       zonesLayer = L.geoJson(zones, {
-        style: {
-          color: "orange",
-          fillColor: "yellow",
-          fillOpacity: 0.25,
-          weight: 1.2,
-          opacity: 0.8
-        },
+        style: { fillColor: "yellow", fillOpacity: 0.25, color: "orange", weight: 1.2, opacity: 0.8 },
         onEachFeature: function (feature, layer) {
           layer.on('click', function () {
             alert("Zone: " + feature.properties.NAME_ENGLI + "\nMAIL_CODE: " + feature.properties.MAIL_CODE);
           });
         }
       }).addTo(map);
-      checkAllLayersLoaded();
+      checkLoaded();
     });
 
-    function checkAllLayersLoaded() {
+    function checkLoaded() {
       if (wasteLayer && zonesLayer) {
         L.control.layers({}, {
           "Zones": zonesLayer,
@@ -281,13 +209,11 @@
         }).addTo(map);
 
         document.getElementById("map").style.opacity = 1;
-
         const loading = document.getElementById("loading-screen");
         loading.classList.add("fade-out");
-        setTimeout(() => loading.style.display = "none", 3000);
+        setTimeout(() => loading.style.display = "none", 4000);
       }
     }
   </script>
-
 </body>
 </html>
