--- a/index.html
+++ b/index.html
@@ -156,12 +156,13 @@
     }).addTo(map);
 
     // أيقونة دائرة للحاويات
-     const binIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/1076/1076909.png', // أيقونة حاوية
+       const binIcon = L.icon({
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/281/281769.png', // أيقونة سلة قمامة حقيقية
       iconSize: [28, 28],
-      iconAnchor: [14, 28], // نقرة على قاعدة الأيقونة
+      iconAnchor: [14, 28], // النقطة اللي تُربط بالإحداثيات
       popupAnchor: [0, -28] // مكان ظهور البوب أب فوق الأيقونة
     });
+
 
 
     let wasteLayer, zonesLayer, markerCluster;
@@ -210,4 +211,5 @@
   </script>
 </body>
 </html>
+
 
