--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     }).addTo(map);
 
     // أيقونة دائرة للحاويات
-       const binIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/281/281769.png', // أيقونة سلة قمامة حقيقية
+    const binIcon = L.icon({
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png', // شكل مختلف لسلة قمامة
       iconSize: [28, 28],
-      iconAnchor: [14, 28], // النقطة اللي تُربط بالإحداثيات
-      popupAnchor: [0, -28] // مكان ظهور البوب أب فوق الأيقونة
+      iconAnchor: [14, 28],
+      popupAnchor: [0, -28]
     });
 
 
@@ -211,5 +211,6 @@
   </script>
 </body>
 </html>
+
 
 
