--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     // أيقونة دائرة للحاويات
     const binIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png', // شكل مختلف لسلة قمامة
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/3405/3405174.png', // سلة زبالة حقيقية
       iconSize: [28, 28],
       iconAnchor: [14, 28],
       popupAnchor: [0, -28]
@@ -211,6 +211,7 @@
   </script>
 </body>
 </html>
+
 
 
 
