--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
       border-radius: 8px;
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
       cursor: pointer;
+      margin-bottom: 5px;
+    }
+
+    .custom-controls {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
     }
   </style>
 </head>
@@ -91,6 +101,12 @@
   </div>
 
   <div id="map"></div>
+
+  <!-- أزرار التحكم -->
+  <div class="custom-controls">
+    <button class="leaflet-control-custom" id="toggle-theme">🌞 / 🌙</button>
+    <button class="leaflet-control-custom" id="locate-me">📍 Locate Me</button>
+  </div>
 
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -106,74 +122,72 @@
     // مقياس الرسم
     L.control.scale({ position: 'bottomleft' }).addTo(map);
 
+    // إعداد الخرائط (نهار / ليل)
+    const dayTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+      subdomains: 'abcd',
+      maxZoom: 20,
+      attribution: '&copy; OpenStreetMap & CARTO'
+    });
+    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      subdomains: 'abcd',
+      maxZoom: 20,
+      attribution: '&copy; OpenStreetMap & CARTO'
+    });
+
+    // تعيين الوضع حسب الساعة
+    const hour = new Date().getHours();
+    let currentTheme = (hour >= 6 && hour < 18) ? "day" : "night";
+    if(currentTheme === "day") dayTiles.addTo(map);
+    else nightTiles.addTo(map);
+
+    // زر تبديل الليل والنهار
+    document.getElementById("toggle-theme").onclick = function () {
+      if(currentTheme === "day"){
+        map.removeLayer(dayTiles);
+        nightTiles.addTo(map);
+        currentTheme = "night";
+      } else {
+        map.removeLayer(nightTiles);
+        dayTiles.addTo(map);
+        currentTheme = "day";
+      }
+    };
 
     // زر تحديد الموقع
-    const locateBtn = L.control({ position: 'topleft' });
-    locateBtn.onAdd = function () {
-      const btn = L.DomUtil.create('button', 'locate-button');
-      btn.innerHTML = '📍 Locate Me';
-      btn.style.backgroundColor = '#fff';
-      btn.style.padding = '6px 10px';
-      btn.style.border = '2px solid #555';
-      btn.style.borderRadius = '8px';
-      btn.style.cursor = 'pointer';
-      btn.style.boxShadow = '0 1px 5px rgba(0,0,0,0.4)';
-      btn.title = 'Find your current location';
-
-      btn.onclick = function () {
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function (pos) {
-            const lat = pos.coords.latitude;
-            const lon = pos.coords.longitude;
-            const userMarker = L.circleMarker([lat, lon], {
-              radius: 8,
-              fillColor: 'blue',
-              color: '#fff',
-              weight: 2,
-              opacity: 1,
-              fillOpacity: 0.9
-            }).addTo(map);
-            userMarker.bindPopup("📍 You are here!").openPopup();
-            map.setView([lat, lon], 17);
-          });
-        } else alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
-      };
-      return btn;
+    document.getElementById("locate-me").onclick = function () {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(pos){
+          const lat = pos.coords.latitude;
+          const lon = pos.coords.longitude;
+          const userMarker = L.circleMarker([lat, lon], {
+            radius: 8,
+            fillColor: 'blue',
+            color: '#fff',
+            weight: 2,
+            fillOpacity: 0.9
+          }).addTo(map);
+          userMarker.bindPopup("📍 You are here!").openPopup();
+          map.setView([lat, lon], 17);
+        });
+      } else alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
     };
-    locateBtn.addTo(map);
 
-    // اختيار الخريطة حسب الوقت
-    const currentHour = new Date().getHours();
-    const isNight = currentHour >= 18 || currentHour < 6;
-    const baseMapUrl = isNight
-      ? 'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png'
-      : 'https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png';
-
-    L.tileLayer(baseMapUrl, {
-      attribution: '&copy; OpenStreetMap & CARTO',
-      subdomains: 'abcd',
-      maxZoom: 20
-    }).addTo(map);
-
-    // أيقونة دائرة للحاويات
+    // أيقونة حاويات
     const binIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/3405/3405174.png', // سلة زبالة حقيقية
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/3405/3405174.png', 
       iconSize: [28, 28],
       iconAnchor: [14, 28],
       popupAnchor: [0, -28]
     });
 
-
-
     let wasteLayer, zonesLayer, markerCluster;
-
-    // Cluster
     markerCluster = L.markerClusterGroup();
 
-    $.getJSON("wasteContainer.json", function (data) {
+    // تحميل الحاويات
+    $.getJSON("wasteContainer.json", function(data){
       wasteLayer = L.geoJson(data, {
-        pointToLayer: function (feature, latlng) {
-          const marker = L.marker(latlng, { icon: binIcon })
+        pointToLayer: function(feature, latlng){
+          const marker = L.marker(latlng, {icon: binIcon})
             .bindPopup(`<b>Waste Container</b><br>Lat: ${latlng.lat.toFixed(4)}<br>Lon: ${latlng.lng.toFixed(4)}`);
           markerCluster.addLayer(marker);
           return marker;
@@ -183,11 +197,12 @@
       checkLoaded();
     });
 
-    $.getJSON("RamallahZones.json", function (zones) {
+    // تحميل المناطق
+    $.getJSON("RamallahZones.json", function(zones){
       zonesLayer = L.geoJson(zones, {
         style: { fillColor: "yellow", fillOpacity: 0.25, color: "orange", weight: 1.2, opacity: 0.8 },
-        onEachFeature: function (feature, layer) {
-          layer.on('click', function () {
+        onEachFeature: function(feature, layer){
+          layer.on('click', function(){
             alert("Zone: " + feature.properties.NAME_ENGLI + "\nMAIL_CODE: " + feature.properties.MAIL_CODE);
           });
         }
@@ -195,8 +210,8 @@
       checkLoaded();
     });
 
-    function checkLoaded() {
-      if (wasteLayer && zonesLayer) {
+    function checkLoaded(){
+      if(wasteLayer && zonesLayer){
         L.control.layers({}, {
           "Zones": zonesLayer,
           "Waste Containers": markerCluster
@@ -205,13 +220,10 @@
         document.getElementById("map").style.opacity = 1;
         const loading = document.getElementById("loading-screen");
         loading.classList.add("fade-out");
-        setTimeout(() => loading.style.display = "none", 4000);
+        setTimeout(()=>loading.style.display='none', 4000);
       }
     }
+
   </script>
 </body>
 </html>
-
-
-
-
